--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.+'
     compile 'com.vk.api:sdk:0.5.12'
 }
