--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,8 @@ dependencies {
 jacocoTestReport {
     reports {
         xml.enabled true
+        html.enabled false
     }
 }
+
+check.dependsOn jacocoTestReport
