--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,22 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.+'
 
-    compile 'com.vk.api:sdk:0.5.12'
+    compile 'com.vk.api:sdk:1.0.2'
+}
+
+jar {
+    baseName = 'FiBotJVM'
+    version =  '0.1.0'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    manifest {
+        attributes(
+                'Main-Class': 'viliars.fibot.core.App'
+        )
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.2"
 }
 
 jacocoTestReport {
