--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: java
 jdk:
-  - oraclejdk12
+- oraclejdk12
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- bash <(curl -s https://codecov.io/bash)
+before_install:
+- openssl aes-256-cbc -K $encrypted_bddfab5bdb61_key -iv $encrypted_bddfab5bdb61_iv
+  -in .travis/deploy_key.enc -out .travis/deploy_key -d
+before_deploy:
+  - .travis/set-up-ssh
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: scp build/libs/FiBot-1.0.jar root@94.103.83.146:FiBotJVM/Test.jar
+  on:
+    branch: master
