--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ after_success:
 before_install:
 - openssl aes-256-cbc -K $encrypted_bddfab5bdb61_key -iv $encrypted_bddfab5bdb61_iv
   -in .travis/deploy_key.enc -out .travis/deploy_key -d
+addons:
+  ssh_known_hosts: 94.103.83.146
 before_deploy:
   - .travis/set-up-ssh
 deploy:
   skip_cleanup: true
   provider: script
-  script: scp build/libs/FiBot-1.0.jar root@94.103.83.146:FiBotJVM/Test.jar
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/build/libs/FiBot-1.0.jar root@94.103.83.146:FiBotJVM/Test.jar
   on:
     branch: master
