--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_bddfab5bdb61_key -iv $encrypted_bddfab5bdb61_iv
   -in .travis/deploy_key.enc -out .travis/deploy_key -d
 addons:
-  ssh_known_hosts: 94.103.83.146
+  ssh_known_hosts: host-94-103-83-146.hosted-by-vdsina.ru
 before_deploy:
   - .travis/set-up-ssh
 deploy:
   skip_cleanup: true
   provider: script
-  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/build/libs/FiBot-1.0.jar root@94.103.83.146:FiBotJVM/Test.jar
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/build/libs/FiBot-1.0.jar root@host-94-103-83-146.hosted-by-vdsina.ru:FiBotJVM/Test.jar
   on:
     branch: master
