--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_deploy:
 - openssl aes-256-cbc -K $encrypted_bddfab5bdb61_key -iv $encrypted_bddfab5bdb61_iv
   -in .travis/deploy_key.enc -out .travis/deploy_key -d
 - ".travis/set-up-ssh"
+- gradlew build
 deploy:
   skip_cleanup: true
   provider: script
