--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ before_deploy:
   -in .travis/deploy_key.enc -out .travis/deploy_key -d
 - ".travis/set-up-ssh"
 - ./gradlew build
+- pwd
+- ls
+- ls $TRAVIS_BUILD_DIR/build
+- ls $TRAVIS_BUILD_DIR/build/libs/
 deploy:
   skip_cleanup: true
   provider: script
