--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.+'
 
     compile 'com.vk.api:sdk:1.0.2'
+    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.22'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.7'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
 }
 
 jar {
